Add pipelines endpoint
