# app/controllers/api/v1/pipelines_controller.rb
@@ -1,0 +1,12 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    class PipelinesController < ApiController
+      def index
+        result = Pipelines::Endpoints::List.call(request)
+        handle_result(result)
+      end
+    end
+  end
+end
