# app/models/pipeline.rb
@@ -16,6 +16,12 @@ class Pipeline < ApplicationRecord
   validates :name, :company_website, :stage, presence: true
   validate :ensure_categories_are_valid
 
+  scope :active, lambda { |merchant_id, user_id|
+    joins(active_pipelines: { merchant: :merchant_users })
+      .where(active_pipelines: { merchant_id: })
+      .where(merchant_users: { user_id: })
+  }
+
   private
 
   def ensure_categories_are_valid
